# rapid-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: rapid-config.cmake
network/: CMakeLists.txt  README.md
network/cmake_modules/: rapid-network-config.cmake
network/include/: network_interface.h  network_manager.h  network_session.h
network/src/: network_interface.cpp  network_manager.cpp  network_session.cpp
support/: CMakeLists.txt  README.md
support/cmake_modules/: rapid-support-config.cmake
support/include/: type_identifier.h
support/src/: type_identifier.cpp
